--- a/index.ipynb
+++ b/index.ipynb
@@ -157,7 +157,8 @@
     "    if restaurant['rating'] > alternative['rating']:\n",
     "        return restaurant\n",
     "    elif restaurant['rating'] < alternative['rating']:\n",
-    "        "
+    "        return alternative\n",
+    "    "
    ]
   },
   {
