--- a/index.ipynb
+++ b/index.ipynb
@@ -157,8 +157,7 @@
     "    if restaurant['rating'] > alternative['rating']:\n",
     "        return restaurant\n",
     "    elif restaurant['rating'] < alternative['rating']:\n",
-    "        return alternative\n",
-    "    "
+    "        return alternative"
    ]
   },
   {
