--- a/index.ipynb
+++ b/index.ipynb
@@ -194,7 +194,7 @@
    "outputs": [],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
-    "    if restaurant['pric']"
+    "    if restaurant['price'] < alternative['price']:"
    ]
   },
   {
