--- a/index.ipynb
+++ b/index.ipynb
@@ -196,7 +196,8 @@
     "def cheaper_restaurant(restaurant, alternative):\n",
     "    if restaurant['price'] < alternative['price']:\n",
     "        return restaurant\n",
-    "    "
+    "    elif: restaurant['price'] > alternative['price']:\n",
+    "            alt"
    ]
   },
   {
