--- a/index.ipynb
+++ b/index.ipynb
@@ -189,15 +189,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-8-818aef0afd26>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-818aef0afd26>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    elif: restaurant['price'] > alternative['price']:\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
     "    if restaurant['price'] < alternative['price']:\n",
     "        return restaurant\n",
     "    elif: restaurant['price'] > alternative['price']:\n",
-    "            alt"
+    "            return alternative"
    ]
   },
   {
