--- a/index.ipynb
+++ b/index.ipynb
@@ -267,7 +267,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    pass"
+    "    for restaurant in restaura"
    ]
   },
   {
