Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -268,7 +268,7 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    for restaurant in restaurants:\n",
-    "        if restaurant['closed']"
+    "        if not restaurant['closed']"
    ]
   },
   {
