--- a/index.ipynb
+++ b/index.ipynb
@@ -268,7 +268,8 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    for restaurant in restaurants:\n",
-    "        if not restaurant['closed']"
+    "        if not restaurant['closed']:\n",
+    "            "
    ]
   },
   {
