--- a/index.ipynb
+++ b/index.ipynb
@@ -267,7 +267,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    \n",
+    "    open_restaurants = []\n",
     "    for restaurant in restaurants:\n",
     "        if not restaurant['closed']:\n",
     "            "
