Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -269,7 +269,8 @@
     "def open_restaurants(restaurants):\n",
     "    open_restaurants = []\n",
     "    for restaurant in restaurants:\n",
-    "        if restaurant['closed']:\n",
+    "        if restaurant['closed'] == False:\n",
+    "            \n",
     "            \n",
     "            "
    ]
