Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -270,7 +270,9 @@
     "    open_restaurants = []\n",
     "    for restaurant in restaurants:\n",
     "        if restaurant['closed'] == False:\n",
-    "            open_restaurants.append()\n",
+    "            open_restaurants.append(restaurant)\n",
+    "    \n",
+    "    return open\n",
     "            \n",
     "            "
    ]
