Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -272,7 +272,7 @@
     "        if restaurant['closed'] == False:\n",
     "            open_restaurants.append(restaurant)\n",
     "    \n",
-    "    return open\n",
+    "    return open_restaurants\n",
     "            \n",
     "            "
    ]
